[gd_scene load_steps=30 format=2]

[ext_resource path="res://scripts/soundsUtil.gd" type="Script" id=1]
[ext_resource path="res://sounds/lowtime.ogg" type="AudioStream" id=2]
[ext_resource path="res://sounds/overworld.ogg" type="AudioStream" id=3]
[ext_resource path="res://sounds/overworld-fast.ogg" type="AudioStream" id=4]
[ext_resource path="res://sounds/starmusic-fast.ogg" type="AudioStream" id=5]
[ext_resource path="res://sounds/starmusic.ogg" type="AudioStream" id=6]
[ext_resource path="res://sounds/konami.ogg" type="AudioStream" id=7]
[ext_resource path="res://sounds/blockbreak.ogg" type="AudioStream" id=8]
[ext_resource path="res://sounds/blockhit.ogg" type="AudioStream" id=9]
[ext_resource path="res://sounds/coin.ogg" type="AudioStream" id=10]
[ext_resource path="res://sounds/mushroomappear.ogg" type="AudioStream" id=11]
[ext_resource path="res://sounds/oneup.ogg" type="AudioStream" id=12]
[ext_resource path="res://sounds/mushroomeat.ogg" type="AudioStream" id=13]
[ext_resource path="res://sounds/boom.ogg" type="AudioStream" id=14]
[ext_resource path="res://sounds/shot.ogg" type="AudioStream" id=15]
[ext_resource path="res://sounds/stomp.ogg" type="AudioStream" id=16]
[ext_resource path="res://sounds/shrink.ogg" type="AudioStream" id=17]
[ext_resource path="res://sounds/scorering.ogg" type="AudioStream" id=18]
[ext_resource path="res://sounds/gameover.ogg" type="AudioStream" id=19]
[ext_resource path="res://sounds/death.ogg" type="AudioStream" id=20]
[ext_resource path="res://sounds/levelend.ogg" type="AudioStream" id=21]
[ext_resource path="res://sounds/underground-fast.ogg" type="AudioStream" id=22]
[ext_resource path="res://sounds/underground.ogg" type="AudioStream" id=23]
[ext_resource path="res://sounds/pipe.ogg" type="AudioStream" id=24]
[ext_resource path="res://sounds/castle.ogg" type="AudioStream" id=25]
[ext_resource path="res://sounds/castle-fast.ogg" type="AudioStream" id=26]
[ext_resource path="res://sounds/bridgebreak.ogg" type="AudioStream" id=27]
[ext_resource path="res://sounds/bowserfall.ogg" type="AudioStream" id=28]
[ext_resource path="res://sounds/castleend.ogg" type="AudioStream" id=29]

[node name="soundsUtil" type="Node2D"]
script = ExtResource( 1 )

[node name="overworld" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="overworld_fast" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="lowtime" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="star" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="star_fast" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="flag" type="AudioStreamPlayer" parent="."]

[node name="konami" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="brick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "sfx"

[node name="brickhit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "sfx"

[node name="coin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "sfx"

[node name="item" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "sfx"

[node name="item1up" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
bus = "sfx"

[node name="mushroom" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
bus = "sfx"

[node name="boom" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
bus = "sfx"

[node name="shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
bus = "sfx"

[node name="stomp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
bus = "sfx"

[node name="big2small" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
bus = "sfx"

[node name="score" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
bus = "sfx"

[node name="gameover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )

[node name="death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )

[node name="levelend" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )

[node name="underground" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )

[node name="underground_fast" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )

[node name="pipe" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )
bus = "sfx"

[node name="castle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )

[node name="castle_fast" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 26 )

[node name="bridgebreak" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 27 )

[node name="bowserfall" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 28 )

[node name="castleend" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 29 )
